third_party/lw_abi/lw_c_api.h

/* Opaque handle to a peer-connection factory. */
typedef struct lw_factory lw_factory_t;
/* ---- Video sink registry ---------------------------------------------- */

/* Opaque handle to a video track, produced by the control-plane shim. */
typedef struct lw_video_track lw_video_track_t;
/* ---- Peer connection / transceiver / receiver ------------------------- */

/* Opaque handles produced by the calls below. */
typedef struct lw_pc lw_pc_t;
/* ---- Local video ------------------------------------------------------ */

/* Opaque handles for the send side. */
typedef struct lw_video_source lw_video_source_t;
typedef struct lw_sender lw_sender_t;
/* Pushes one I420 frame into a source. `data` holds width*height*3/2 bytes:
 * the Y plane, then U, then V, each tightly packed. The data is copied, so it
 * need not outlive the call. Returns 0 on success, negative on error (null
 * handle, bad dimensions, or a size that does not match them).
 *
 * Frames are consumed at whatever rate they are pushed; the caller sets the
 * pace. */
LW_C_API int lw_video_source_push_i420(lw_video_source_t* source, int width,
                                       int height, const uint8_t* data,
                                       size_t size);
/* Creates a local video track fed by `source`.
 *
 * `id` becomes the track's id in the SDP and must be a non-empty string: an
 * empty one produces an "a=msid:<stream> " line with nothing after the space,
 * which the far side rejects when parsing the session description. That
 * failure names the msid attribute and says nothing about the track, so it is
 * refused here instead. Returns NULL on failure; the handle owns one
 * reference. */
LW_C_API lw_video_track_t* lw_factory_create_video_track(
    lw_factory_t* factory, lw_video_source_t* source, const char* id);
/* Attaches a local track to a peer connection, in the streams named by
 * `stream_ids` (may be NULL when `stream_id_count` is 0). Returns the sender,
 * or NULL on failure; the handle owns one reference. */
LW_C_API lw_sender_t* lw_pc_add_track(lw_pc_t* pc, lw_video_track_t* track,
                                      const char* const* stream_ids,
                                      size_t stream_id_count);
/* Enables or disables a track. A disabled track still flows, but carries
 * black frames -- this is mute, not removal. Works on local and remote tracks
 * alike. Returns 0 on success, negative on error. */
LW_C_API int lw_video_track_set_enabled(lw_video_track_t* track, int enabled);
/* Whether a track is enabled. Returns 1, 0, or negative on error. */
LW_C_API int lw_video_track_enabled(lw_video_track_t* track);
/* ---- Pipeline counters ------------------------------------------------ */

/* Per-track frame counters, cheap enough to read every frame: they are plain
 * counters, read without taking the lock the delivery path holds.
 *
 * These describe the local pipeline -- what the decoder produced and where it
 * went. They say nothing about the network; RTP, RTCP, ICE and DTLS statistics
 * are gathered asynchronously by the library and are a separate request.
 *
 * Rates are deliberately absent. Two samples and the elapsed time between them
 * give a rate over whatever window the caller wants, where a rate computed
 * here would impose one. */
typedef struct LwVideoTrackStats {
  uint32_t size; /* sizeof(LwVideoTrackStats) */
  uint32_t reserved;
  /* Every decoded frame the track delivered, whatever path it then took. */
  uint64_t frames_delivered;
  /* Delivered as a dmabuf to a bound sink, which the sink took. */
  uint64_t frames_native;
  /* Delivered through the software path: no native buffer, so the frame was
   * converted. Nonzero means the zero-copy path is not in use. */
  uint64_t frames_cpu;
  /* Native frames that reached no sink: none bound, the sink declined, or the
   * buffer was some other implementation's native type. */
  uint64_t frames_dropped;
  /* Geometry of the most recent frame, or 0 before the first. */
  uint32_t last_width;
  uint32_t last_height;
  /* CLOCK_MONOTONIC microseconds at the most recent frame, or 0 before the
   * first. Paired with frames_delivered across two calls, this gives a rate. */
  int64_t last_frame_us;
} LwVideoTrackStats;
/* Fills `out` with the track's counters. `out->size` must be set by the caller
 * to sizeof(LwVideoTrackStats) before the call. Returns 0 on success, negative
 * on error (null or non-video track, missing or mismatched size). */
LW_C_API int lw_video_track_get_stats(lw_video_track_t* track,
                                      LwVideoTrackStats* out);
/* ---- SDP negotiation -------------------------------------------------- */

/* Completion callbacks for the async SDP operations below. They are invoked on
 * the signaling thread. `user` is the opaque cookie passed to the originating
 * call.
 *
 * String payloads are owned by the callback and stay valid after it returns,
 * so a consumer that has to hand the payload to another thread before reading
 * it can do so; retire each with lw_string_free. Nothing is allocated for a
 * NULL callback. A payload may be NULL if it could not be allocated. */
typedef void (*lw_sdp_success_cb)(char* sdp, char* type, void* user);
typedef void (*lw_set_sdp_success_cb)(void* user);
typedef void (*lw_sdp_failure_cb)(char* error, void* user);
/* Creates an offer/answer. On success `on_success` receives the SDP and its
 * type ("offer"/"answer"). */
LW_C_API void lw_pc_create_offer(lw_pc_t* pc, lw_sdp_success_cb on_success,
                                 lw_sdp_failure_cb on_failure, void* user);
LW_C_API void lw_pc_create_answer(lw_pc_t* pc, lw_sdp_success_cb on_success,
                                  lw_sdp_failure_cb on_failure, void* user);
/* Applies a local/remote session description. `type` is "offer"/"answer". */
LW_C_API void lw_pc_set_local_description(lw_pc_t* pc, const char* sdp,
                                          const char* type,
                                          lw_set_sdp_success_cb on_success,
                                          lw_sdp_failure_cb on_failure,
                                          void* user);
LW_C_API void lw_pc_set_remote_description(lw_pc_t* pc, const char* sdp,
                                           const char* type,
                                           lw_set_sdp_success_cb on_success,
                                           lw_sdp_failure_cb on_failure,
                                           void* user);
/* Adds a remote ICE candidate. */
LW_C_API void lw_pc_add_ice_candidate(lw_pc_t* pc, const char* mid,
                                      int mline_index, const char* candidate);
/* Statistics the library gathers from the transport: RTP, RTCP, ICE and DTLS.
 *
 * Delivered as a JSON array, one object per report, each carrying its own id,
 * type and timestamp along with its members -- the shape the library already
 * produces, rather than a C mirror of its sixteen member types.
 *
 * Asynchronous because that is how the library collects them. A synchronous
 * call would either block one of its threads or hand back something stale.
 *
 * Poll these at human rates, a second or so apart. The per-frame pipeline
 * counters above are the ones to read at frame rate; these allocate and
 * serialize on the signaling thread.
 *
 * The document is owned by the callback, as the SDP payloads are, and is
 * retired with lw_string_free. */
typedef void (*lw_stats_success_cb)(char* json, void* user);
LW_C_API void lw_pc_get_stats(lw_pc_t* pc, lw_stats_success_cb on_success,
                              lw_sdp_failure_cb on_failure, void* user);
/* ---- Data channel ----------------------------------------------------- */

typedef struct lw_data_channel lw_data_channel_t;
/* Channel configuration. Pass NULL to lw_pc_create_data_channel for the
 * defaults: ordered and reliable, which is what most callers want.
 *
 * max_retransmit_time_ms and max_retransmits are the two ways to make a
 * channel unreliable and are mutually exclusive; -1 leaves both unset. */
typedef struct LwDataChannelInit {
  uint32_t size;                  /* sizeof(LwDataChannelInit) */
  int32_t ordered;                /* nonzero: deliver in order (default) */
  int32_t max_retransmit_time_ms; /* -1 unset */
  int32_t max_retransmits;        /* -1 unset */
  int32_t negotiated;             /* nonzero: agreed out of band, use `id` */
  int32_t id;                     /* channel id when negotiated */
} LwDataChannelInit;
/* Opens a data channel. `label` must be non-NULL. Returns NULL on failure; the
 * handle owns one reference. */
LW_C_API lw_data_channel_t* lw_pc_create_data_channel(
    lw_pc_t* pc, const char* label, const LwDataChannelInit* init);