lib/src/ffi/lw_bindings.dart


  /// Pushes one I420 frame into a source. `data` holds width*height*3/2 bytes:
  /// the Y plane, then U, then V, each tightly packed. The data is copied, so it
  /// need not outlive the call. Returns 0 on success, negative on error (null
  /// handle, bad dimensions, or a size that does not match them).
  ///
  /// Frames are consumed at whatever rate they are pushed; the caller sets the
  /// pace.
  int lw_video_source_push_i420(
    ffi.Pointer<lw_video_source_t> source,
    int width,
    int height,
    ffi.Pointer<ffi.Uint8> data,
    int size,
  ) {
    return _lw_video_source_push_i420(
      source,
      width,
      height,
      data,
      size,
    );
  }

  late final _lw_video_source_push_i420Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_video_source_t>, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('lw_video_source_push_i420');
  late final _lw_video_source_push_i420 =
      _lw_video_source_push_i420Ptr.asFunction<
          int Function(ffi.Pointer<lw_video_source_t>, int, int,
              ffi.Pointer<ffi.Uint8>, int)>();

  /// Creates a local video track fed by `source`.
  ///
  /// `id` becomes the track's id in the SDP and must be a non-empty string: an
  /// empty one produces an "a=msid:<stream> " line with nothing after the space,
  /// which the far side rejects when parsing the session description. That
  /// failure names the msid attribute and says nothing about the track, so it is
  /// refused here instead. Returns NULL on failure; the handle owns one
  /// reference.
  ffi.Pointer<lw_video_track_t> lw_factory_create_video_track(
    ffi.Pointer<lw_factory_t> factory1,
    ffi.Pointer<lw_video_source_t> source,
    ffi.Pointer<ffi.Char> id,
  ) {
    return _lw_factory_create_video_track(
      factory1,
      source,
      id,
    );
  }

  late final _lw_factory_create_video_trackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_video_track_t> Function(
              ffi.Pointer<lw_factory_t>,
              ffi.Pointer<lw_video_source_t>,
              ffi.Pointer<ffi.Char>)>>('lw_factory_create_video_track');
  late final _lw_factory_create_video_track =
      _lw_factory_create_video_trackPtr.asFunction<
          ffi.Pointer<lw_video_track_t> Function(ffi.Pointer<lw_factory_t>,
              ffi.Pointer<lw_video_source_t>, ffi.Pointer<ffi.Char>)>();

  /// Attaches a local track to a peer connection, in the streams named by
  /// `stream_ids` (may be NULL when `stream_id_count` is 0). Returns the sender,
  /// or NULL on failure; the handle owns one reference.
  ffi.Pointer<lw_sender_t> lw_pc_add_track(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<lw_video_track_t> track,
    ffi.Pointer<ffi.Pointer<ffi.Char>> stream_ids,
    int stream_id_count,
  ) {
    return _lw_pc_add_track(
      pc,
      track,
      stream_ids,
      stream_id_count,
    );
  }

  late final _lw_pc_add_trackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_sender_t> Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<lw_video_track_t>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Size)>>('lw_pc_add_track');
  late final _lw_pc_add_track = _lw_pc_add_trackPtr.asFunction<
      ffi.Pointer<lw_sender_t> Function(
          ffi.Pointer<lw_pc_t>,
          ffi.Pointer<lw_video_track_t>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int)>();

  /// Enables or disables a track. A disabled track still flows, but carries
  /// black frames -- this is mute, not removal. Works on local and remote tracks
  /// alike. Returns 0 on success, negative on error.
  int lw_video_track_set_enabled(
    ffi.Pointer<lw_video_track_t> track,
    int enabled,
  ) {
    return _lw_video_track_set_enabled(
      track,
      enabled,
    );
  }

  late final _lw_video_track_set_enabledPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_video_track_t>,
              ffi.Int)>>('lw_video_track_set_enabled');
  late final _lw_video_track_set_enabled = _lw_video_track_set_enabledPtr
      .asFunction<int Function(ffi.Pointer<lw_video_track_t>, int)>();

  /// Whether a track is enabled. Returns 1, 0, or negative on error.
  int lw_video_track_enabled(
    ffi.Pointer<lw_video_track_t> track,
  ) {
    return _lw_video_track_enabled(
      track,
    );
  }

  late final _lw_video_track_enabledPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<lw_video_track_t>)>>(
      'lw_video_track_enabled');
  late final _lw_video_track_enabled = _lw_video_track_enabledPtr
      .asFunction<int Function(ffi.Pointer<lw_video_track_t>)>();

  /// Fills `out` with the track's counters. `out->size` must be set by the caller
  /// to sizeof(LwVideoTrackStats) before the call. Returns 0 on success, negative
  /// on error (null or non-video track, missing or mismatched size).
  int lw_video_track_get_stats(
    ffi.Pointer<lw_video_track_t> track,
    ffi.Pointer<LwVideoTrackStats> out,
  ) {
    return _lw_video_track_get_stats(
      track,
      out,
    );
  }

  late final _lw_video_track_get_statsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_video_track_t>,
              ffi.Pointer<LwVideoTrackStats>)>>('lw_video_track_get_stats');
  late final _lw_video_track_get_stats =
      _lw_video_track_get_statsPtr.asFunction<
          int Function(
              ffi.Pointer<lw_video_track_t>, ffi.Pointer<LwVideoTrackStats>)>();

  /// Creates an offer/answer. On success `on_success` receives the SDP and its
  /// type ("offer"/"answer").
  void lw_pc_create_offer(
    ffi.Pointer<lw_pc_t> pc,
    lw_sdp_success_cb on_success,
    lw_sdp_failure_cb on_failure,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_create_offer(
      pc,
      on_success,
      on_failure,
      user,
    );
  }

  late final _lw_pc_create_offerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<lw_pc_t>, lw_sdp_success_cb,
              lw_sdp_failure_cb, ffi.Pointer<ffi.Void>)>>('lw_pc_create_offer');
  late final _lw_pc_create_offer = _lw_pc_create_offerPtr.asFunction<
      void Function(ffi.Pointer<lw_pc_t>, lw_sdp_success_cb, lw_sdp_failure_cb,
          ffi.Pointer<ffi.Void>)>();

  void lw_pc_create_answer(
    ffi.Pointer<lw_pc_t> pc,
    lw_sdp_success_cb on_success,
    lw_sdp_failure_cb on_failure,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_create_answer(
      pc,
      on_success,
      on_failure,
      user,
    );
  }

  late final _lw_pc_create_answerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<lw_pc_t>,
              lw_sdp_success_cb,
              lw_sdp_failure_cb,
              ffi.Pointer<ffi.Void>)>>('lw_pc_create_answer');
  late final _lw_pc_create_answer = _lw_pc_create_answerPtr.asFunction<
      void Function(ffi.Pointer<lw_pc_t>, lw_sdp_success_cb, lw_sdp_failure_cb,
          ffi.Pointer<ffi.Void>)>();

  /// Applies a local/remote session description. `type` is "offer"/"answer".
  void lw_pc_set_local_description(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<ffi.Char> sdp,
    ffi.Pointer<ffi.Char> type,
    lw_set_sdp_success_cb on_success,
    lw_sdp_failure_cb on_failure,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_set_local_description(
      pc,
      sdp,
      type,
      on_success,
      on_failure,
      user,
    );
  }

  late final _lw_pc_set_local_descriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              lw_set_sdp_success_cb,
              lw_sdp_failure_cb,
              ffi.Pointer<ffi.Void>)>>('lw_pc_set_local_description');
  late final _lw_pc_set_local_description =
      _lw_pc_set_local_descriptionPtr.asFunction<
          void Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              lw_set_sdp_success_cb,
              lw_sdp_failure_cb,
              ffi.Pointer<ffi.Void>)>();

  void lw_pc_set_remote_description(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<ffi.Char> sdp,
    ffi.Pointer<ffi.Char> type,
    lw_set_sdp_success_cb on_success,
    lw_sdp_failure_cb on_failure,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_set_remote_description(
      pc,
      sdp,
      type,
      on_success,
      on_failure,
      user,
    );
  }

  late final _lw_pc_set_remote_descriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              lw_set_sdp_success_cb,
              lw_sdp_failure_cb,
              ffi.Pointer<ffi.Void>)>>('lw_pc_set_remote_description');
  late final _lw_pc_set_remote_description =
      _lw_pc_set_remote_descriptionPtr.asFunction<
          void Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              lw_set_sdp_success_cb,
              lw_sdp_failure_cb,
              ffi.Pointer<ffi.Void>)>();

  /// Adds a remote ICE candidate.
  void lw_pc_add_ice_candidate(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<ffi.Char> mid,
    int mline_index,
    ffi.Pointer<ffi.Char> candidate,
  ) {
    return _lw_pc_add_ice_candidate(
      pc,
      mid,
      mline_index,
      candidate,
    );
  }

  late final _lw_pc_add_ice_candidatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<lw_pc_t>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Pointer<ffi.Char>)>>('lw_pc_add_ice_candidate');
  late final _lw_pc_add_ice_candidate = _lw_pc_add_ice_candidatePtr.asFunction<
      void Function(ffi.Pointer<lw_pc_t>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Char>)>();

  void lw_pc_get_stats(
    ffi.Pointer<lw_pc_t> pc,
    lw_stats_success_cb on_success,
    lw_sdp_failure_cb on_failure,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_pc_get_stats(
      pc,
      on_success,
      on_failure,
      user,
    );
  }

  late final _lw_pc_get_statsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<lw_pc_t>, lw_stats_success_cb,
              lw_sdp_failure_cb, ffi.Pointer<ffi.Void>)>>('lw_pc_get_stats');
  late final _lw_pc_get_stats = _lw_pc_get_statsPtr.asFunction<
      void Function(ffi.Pointer<lw_pc_t>, lw_stats_success_cb,
          lw_sdp_failure_cb, ffi.Pointer<ffi.Void>)>();

  /// Opens a data channel. `label` must be non-NULL. Returns NULL on failure; the
  /// handle owns one reference.
  ffi.Pointer<lw_data_channel_t> lw_pc_create_data_channel(
    ffi.Pointer<lw_pc_t> pc,
    ffi.Pointer<ffi.Char> label,
    ffi.Pointer<LwDataChannelInit> init,
  ) {
    return _lw_pc_create_data_channel(
      pc,
      label,
      init,
    );
  }

  late final _lw_pc_create_data_channelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_data_channel_t> Function(
              ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<LwDataChannelInit>)>>('lw_pc_create_data_channel');
  late final _lw_pc_create_data_channel =
      _lw_pc_create_data_channelPtr.asFunction<
          ffi.Pointer<lw_data_channel_t> Function(ffi.Pointer<lw_pc_t>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<LwDataChannelInit>)>();
